package octo;

// 単体のAssetBundle情報
message Data {
  required int32 id = 1;
  optional string filepath = 2;
  required string name = 3;
  required int32 size = 4;
  optional uint32 crc = 5;
  required string md5 = 10;
  optional int32 priority = 6;
  repeated int32 tagid = 7;	// tagname へのindex（配列。size=0ならtag無し）
  repeated int32 dependencie = 8;
  required string objectName = 11;
  optional uint64 generation = 12;
  optional int32 uploadVersionId = 13;

  enum State {
    NONE   = 0; // NONE   - default （or 削除済み（状態としては無いかもしれませんが））
    ADD    = 1; // ADD    - 追加リクエスト中（サーバから送られてくる状態）
    UPDATE = 2; // UPDATE - 更新リクエスト中（サーバから送られてくる状態）
    LATEST = 3; // LATEST - 最新の状態
    DELETE = 4; // DELETE - 削除リクエスト中（サーバから送られてくる状態）
  }
  optional State state = 9 [default = NONE];
}

// AssetBundle情報一覧
message Database {
  required int32 revision = 1;
  repeated Data assetBundleList = 2; //AssetBundleデータ
  repeated string tagname = 3;
  repeated Data resourceList = 4; //AssetBundle以外のデータ
  optional string urlFormat = 5;
}



